more readable code and UI fixes

--- a/css/header.css
+++ b/css/header.css
@@ -20,7 +20,7 @@ body{
 .layout-container #header-wrapper{
 	margin: 0 auto;
 	max-width: 1129px;
-	height:174px;
+	height:129px;
 }
 
 /*
